--- a/index.html
+++ b/index.html
@@ -1,20 +1,66 @@
 <!Doctype html>
 <html>
     <head>
+        <style>
+            body{
+                text-align: center;
+            }
+            #url-input{
+                width:80%;
+                height:40px;
+                margin:0 auto;
+                border-radius:5px;
+                padding-left: 10px;
+                border:solid 1px purple;
+            }
+
+            .individual-meme{
+                width:90%;
+                height:400px;
+                border: solid 2px;
+                display: flex;
+                flex-direction: column;
+                margin-top:10px;
+                padding: 20px;
+            }
+            p{
+                margin:0px;
+            }
+            button{
+                background-color: purple;
+                height:40px;
+                color:white;
+                border-radius: 5px;
+                margin: 0 auto;
+            }
+            img{
+                height:300px;
+                max-width: 100%;
+                margin-bottom: 10px;;
+            }
+            .vote{
+                margin-top: 10px;
+                width: 60%;
+            }
+        </style>    
         
     </head>
 
     <body>
-        <div >
-            <input type="text">
+        <div>
+            <input id="url-input" type="text" placeholder="Enter Url">
             <button>Register Meme</button>
         </div>
-
+        <div id="all-memes">
         <div class="individual-meme">
-            <img width="300px">
+            <p>Current Vote Count: 4 </p>
+            <img >
             <input type="text">
+            <button class="vote">Vote</button>
         </div>  
+    </div>
         <script src="https://unpkg.com/@aeternity/aepp-sdk/dist/aepp-sdk.browser-script.js"></script>
         <script src="js/index.js"></script>
+ 
     </body>
 </html>
