CHanged sdk version

--- a/index.html
+++ b/index.html
@@ -52,15 +52,14 @@
             <button>Register Meme</button>
         </div>
         <div id="all-memes">
-        <div class="individual-meme">
+        <!--<div class="individual-meme">
             <p>Current Vote Count: 4 </p>
             <img >
             <input type="text">
             <button class="vote">Vote</button>
-        </div>  
+        </div>  -->
     </div>
-    <script src="https://unpkg.com/@aeternity/aepp-sdk/dist/aepp-sdk.browser-script.js"></script> 
-      
+    <script src="https://unpkg.com/@aeternity/aepp-sdk@6.1.2/dist/aepp-sdk.browser-script.js"></script>  
         <script src="js/index.js"></script>
  
     </body>
