--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!Doctype html>
 <html>
     <head>
+        <link rel="stylesheet" href="./CSS/style.css">
         <style>
             body{
                 text-align: center;
@@ -58,6 +59,9 @@
             <input type="text">
             <button class="vote">Vote</button>
         </div>  -->
+    </div>
+    <div id="loader" class="loader">
+
     </div>
     <script src="https://unpkg.com/@aeternity/aepp-sdk@6.1.2/dist/aepp-sdk.browser-script.js"></script>  
         <script src="js/index.js"></script>
