--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <style>
             body{
                 text-align: center;
+                min-height: 100vh;
+  max-height: 100vh;
+  overflow-y: auto;
             }
             #url-input{
                 width:80%;
