--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <body>
         <div>
             <input id="url-input" type="text" placeholder="Enter Url">
-            <button>Register Meme</button>
+            <button id="register-meme">Register Meme</button>
         </div>
         <div id="all-memes">
         <!--<div class="individual-meme">
