--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <style>
             body{
                 text-align: center;
-                min-height: 100vh;
-  max-height: 100vh;
-  overflow-y: auto;
+                min-height: 400vh;
+                max-width: 400px;
+                 overflow-y: auto;
             }
             #url-input{
                 width:80%;
