--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <style>
             body{
                 text-align: center;
-                min-height: 400vh;
-                max-width: 400px;
-                 overflow-y: auto;
+                overflow-y : auto;
+                width: 370px;
+                height: 100vh
             }
             #url-input{
                 width:80%;
